@@ -3,10 +3,8 @@ package org.societies.security.policynegotiator.provider;
 import static org.junit.Assert.*;
 import static org.mockito.Mockito.*;
 
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
-import java.util.ArrayList;
 import java.util.List;
 
 import org.junit.After;
@@ -22,7 +20,6 @@ import org.societies.api.identity.IIdentity;
 import org.societies.api.identity.IIdentityManager;
 import org.societies.api.internal.domainauthority.IClientJarServerRemote;
 import org.societies.api.internal.security.policynegotiator.INegotiationProviderSLMCallback;
-import org.societies.api.internal.security.policynegotiator.NegotiationException;
 import org.societies.api.schema.servicelifecycle.model.ServiceResourceIdentifier;
 import org.societies.api.security.digsig.ISignatureMgr;
 import org.societies.security.comms.policynegotiator.CommsClient;
@@ -49,8 +46,6 @@ public class ProviderServiceMgrTest {
 		public boolean success = false;
 		public boolean error = false;
 		
-		public String msg = null;
-
 		@Override
 		public void notifySuccess() {
 			this.success = true;
@@ -59,7 +54,6 @@ public class ProviderServiceMgrTest {
 		@Override
 		public void notifyError(String msg, Throwable e) {
 			this.error = true;
-			this.msg = msg;
 		}
 	}
 	
@@ -157,7 +151,7 @@ public class ProviderServiceMgrTest {
 		serviceId = new ServiceResourceIdentifier();
 		serviceId.setIdentifier(new URI("societies://aaa.bbb.ccc"));
 		serviceId.setServiceInstanceIdentifier("service-1");
-		fileServer = new URI("http://localhost/foo");
+		fileServer = new URI("http://localhost:12345/foo");
 		callback = new NegotiationProviderSLMCallback();
 	}
 
@@ -174,34 +168,7 @@ public class ProviderServiceMgrTest {
 	}
 
 	@Test
-	public void testAddService_ListStrings_0() throws Exception {
-		
-		List<String> files = new ArrayList<String>();
-		
-		assertFalse(callback.success);
-		assertEquals(0, classUnderTest.getServices().size(), 0.0);
-		classUnderTest.addService(serviceId, slaXml, fileServer, files, callback);
-		assertEquals(1, classUnderTest.getServices().size(), 0.0);
-
-		Thread.sleep(TIME_TO_WAIT_IN_MS);
-		assertTrue(callback.success);
-		assertFalse(callback.error);
-	}
-
-	@Test
-	public void testAddService_ListStrings_1() throws Exception {
-		
-		List<String> files = new ArrayList<String>();
-		files.add("foo.jar");
-		
-		assertFalse(callback.success);
-		assertEquals(0, classUnderTest.getServices().size(), 0.0);
-		classUnderTest.addService(serviceId, slaXml, fileServer, files, callback);
-		assertEquals(1, classUnderTest.getServices().size(), 0.0);
-	}
-
-	@Test
-	public void testAddService_UrlArray_0() throws Exception {
+	public void testAddService_0() throws Exception {
 
 		URL[] fileUrls = new URL[] {};
 
@@ -216,9 +183,9 @@ public class ProviderServiceMgrTest {
 	}
 
 	@Test
-	public void testAddService_UrlArray_1() throws Exception {
+	public void testAddService_1() throws Exception {
 
-		URL[] fileUrls = new URL[] {new URL("http://localhost/foo")};
+		URL[] fileUrls = new URL[] {fileServer.toURL()};
 
 		assertFalse(callback.success);
 		assertEquals(0, classUnderTest.getServices().size(), 0.0);
@@ -227,19 +194,8 @@ public class ProviderServiceMgrTest {
 	}
 
 	@Test
-	public void testAddService_SingleFile() throws Exception {
-		
-		String filePath = "foo.jar";
-		
-		assertFalse(callback.success);
-		assertEquals(0, classUnderTest.getServices().size(), 0.0);
-		classUnderTest.addService(serviceId, slaXml, fileServer, filePath, callback);
-		assertEquals(1, classUnderTest.getServices().size(), 0.0);
-	}
-
-	@Test
 	public void testRemoveService() throws Exception {
-		testAddService_SingleFile();
+		testAddService_1();
 		assertEquals(1, classUnderTest.getServices().size(), 0.0);
 		classUnderTest.removeService(serviceId);
 		assertEquals(0, classUnderTest.getServices().size(), 0.0);
@@ -253,7 +209,7 @@ public class ProviderServiceMgrTest {
 		service = classUnderTest.getService(serviceId.getIdentifier().toASCIIString());
 		assertNull(service);
 		
-		testAddService_SingleFile();
+		testAddService_1();
 		service = classUnderTest.getService(serviceId.getIdentifier().toASCIIString());
 		assertNotNull(service);
 	}
@@ -263,7 +219,7 @@ public class ProviderServiceMgrTest {
 		
 		List<URI> signedUris;
 		
-		testAddService_UrlArray_1();
+		testAddService_1();
 		signedUris = classUnderTest.getSignedUris(serviceId.getIdentifier().toASCIIString());
 		assertEquals(1, signedUris.size(), 0.0);
 	}
